css/styles.css
/* ... */
.select-item:focus {
    outline: none;
    border-color: #888;
}

.ux-customize {
    display: flex;
    justify-content: space-around;
}

.divider {
    height: 1px; /* Line thickness */
    background-color: #ddd; /* Light gray color */
    margin: 20px 0; /* Space above and below the line */
    border: none; /* No border styles */
}

.game-display {
    flex-grow: 1;
}

.game-area {
    display: flex;
    gap: 0.5rem;
    flex-direction: column;
    border-radius: 0 0 20px 20px;
    max-width: 750px;
    position: relative;
    box-sizing: content-box;
}

.game-area:before {
    display: none;
    font-family: "Espionage", sans-serif;
    position: absolute;
    bottom: 100%;
    width: calc(100% + 4px);
    left: -2px;
    text-align: center;
}

.game-area.right, .game-area.right:before {
    border: 2px solid #28a745; /* Green border */
    box-shadow: 0 0 10px rgba(40, 167, 69, 0.7); /* Glowing green effect */
}

.game-area.right:before {
    content: 'RIGHT';
    display: block;
    background: #28a745;
}

.game-area.wrong, .game-area.wrong:before {
    border: 2px solid #dc3545;
    box-shadow: 0 0 10px rgba(220, 53, 69, 0.7);
}

.game-area.wrong:before {
    content: 'WRONG';
    display: block;
    background: #dc3545;
}

.game-area.missed, .game-area.missed:before {
    border: 2px solid #6c757d;
    box-shadow: 0 0 10px rgba(108, 117, 125, 0.7);
}

.game-area.missed:before {
    content: 'MISSED';
    display: block;
    background: #6c757d;
}

.ux-customize {
    display: flex;
    gap: 1rem;
}

.carousel, .display-outer {
    margin: 0 auto;
    height: fit-content;
    display: none;
}

.carousel.visible, .display-outer.visible {
    display: block;
}

.confirmation-buttons {
    display: flex;
    gap: 1rem;
    justify-content: center;
    margin: 0.5rem 0;
}

.confirmation-true,
.confirmation-false {
    flex-grow: 1;
    font-size: var(--step-1);
    max-width: 10rem;
    padding: 0.3rem 0.7rem;
}

.confirmation-true {
    background-color: var(--correct-color)!important;
}
.confirmation-true:hover {
    box-shadow: 0 3px 5px 0 #0908!important;
}

.confirmation-false {
    background-color: var(--wrong-color)!important;
}
.confirmation-false:hover {
    box-shadow: 0 3px 5px 0 #9008!important;
}

.score {
    padding: 0 0.5rem;
    font-size: var(--step-1);
    text-shadow: var(--text-outline);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 18px;
}

.carousel {
    text-align: center;
}

.carousel_display_label-wrapper, .display-inner {
    position: relative;
    gap: 1em;
}

.carousel_display_label-wrapper {
    padding: 1.5em 1em;
    margin: 0 1.5rem;
}

.display-outer {
    width: fit-content;
}

.display-inner {
    padding: 1rem 1.5rem;
    margin: 0 3rem;
}

.carousel_display_label-wrapper h2, .display-inner h2 {
    display: flex;
    font-family: "Espionage", sans-serif;
    font-size: var(--step-0);
    letter-spacing: 0.15em;
    justify-content: space-between;
    margin-top: -0.6rem;
    padding: 0 0.5rem 0 0.65rem;
    position: absolute;
    width: 100%;
    gap: 0.5rem;
    top: 0;
    left: 0;
    text-shadow: var(--text-outline);
    color: var(--display-label-color);
}

.carousel_display_label_progress, .display_label_level {
    font-family: monospace;
}

.display_label_type {
    white-space: nowrap;
}

.display_text {
    max-height: calc(100vh - 260px);
    min-width: 270px;
    line-height: 1.5;
    padding: 0.5rem 0.75rem 0 0.125rem;
    overflow-y: auto;
    overflow-x: hidden;
}

.display_text.order-aesthetic {
    padding-left: 1.75rem;
    overflow-x: auto;
}

.display_text.order-aesthetic .formatted-premise,
.display_text.order-aesthetic .formatted-conclusion,
.display_text.order-aesthetic .formatted-operation {
    white-space: nowrap;
}

.carousel_display_text.order-aesthetic {
    padding-left: 1.75rem;
    overflow-x: auto;
}

.carousel_display_text.order-aesthetic .formatted-premise {
    white-space: nowrap;
}

.display_text.big-question .formatted-premise {
    margin-bottom: 0.2rem;
}

.display_text.minimal .formatted-premise,
.display_text.minimal .formatted-operation,
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    justify-items: center;
    gap: 1.2rem;
}

.display_text.minimal .formatted-premise > span:nth-child(1),
.display_text.minimal .formatted-operation > span:nth-child(1),
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion > span:nth-child(1) {
    justify-self: end;
}

.display_text.minimal .formatted-premise > span:nth-child(2),
.display_text.minimal .formatted-operation > span:nth-child(2),
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion > span:nth-child(2) {
    min-width: 2rem;
    justify-self: center;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.display_text.minimal .formatted-premise > span:nth-child(3),
.display_text.minimal .formatted-operation > span:nth-child(3),
.display_text.minimal:not(.complicated-conclusion) .formatted-conclusion > span:nth-child(3) {
    justify-self: start;
}

.game-area.wide-premises {
    max-width: 900px;
}

.display_text.wide-premises .formatted-premise {
    display: grid;
    grid-template-columns: 1fr 2.5fr 1fr 2.5fr 1fr;
    justify-items: center;
    gap: 0.7rem;
}

.display_text.wide-premises.minimal .formatted-premise {
    grid-template-columns: repeat(5, 1fr);
    gap: 1.2rem;
}

.display_text.wide-premises .formatted-premise > span:nth-child(1) {
    justify-self: end;
}

.display_text.wide-premises .formatted-premise > span:nth-child(3) {
    justify-self: center;
}

.display_text.wide-premises .formatted-premise > span:nth-child(5) {
    justify-self: start;
}

.ci-Wifi_None {
    visibility: hidden;
}

.hqli-preamble,
.hqli-postamble,
.hqli-transform-header {
    font-size: var(--step--2);
    opacity: 0.7;
}
/* ... */

